--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "basic",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -29,6 +31,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
